--- a/index.html
+++ b/index.html
@@ -83,7 +83,33 @@
 
 
         <div id="full" class="max-md:w-5/6 z-20 fixed h-full top-0 right-0 w-3/12 bg-[#17151a] translate-x-full">
-            <i class="ri-close-line magnet-target text-3xl absolute top-5 right-5 cursor-pointer"></i>
+            <i class="ri-close-line magnet-target text-3xl absolute top-5 right-5 cursor-pointer mb-5"></i>
+            <div class="max-w-md mx-auto bg-purple p-4 rounded shadow mt-8">
+                <details class="mb-8 ">
+                    <summary class="cursor-pointer text-xl font-semibold text-purple-600">My Company</summary>
+                    <div class="mt-2 ml-4">
+                        <a href="#" class="block text-blue-500 hover:underline">Link 1</a>
+                        <a href="#" class="block text-blue-500 hover:underline">Link 2</a>
+                        <a href="#" class="block text-blue-500 hover:underline">Link 3</a>
+                    </div>
+                </details>
+                <details class="mb-8">
+                    <summary class="cursor-pointer text-xl font-semibold text-purple-600">Dropdown 2</summary>
+                    <div class="mt-2 ml-4">
+                        <a href="#" class="block text-blue-500 hover:underline">Link 1</a>
+                        <a href="#" class="block text-blue-500 hover:underline">Link 2</a>
+                        <a href="#" class="block text-blue-500 hover:underline">Link 3</a>
+                    </div>
+                </details>
+                <details class="mb-8">
+                    <summary class="cursor-pointer text-xl font-semibold text-purple-600">Dropdown 3</summary>
+                    <div class="mt-2 ml-4">
+                        <a href="#" class="block text-blue-500 hover:underline">Link 1</a>
+                        <a href="#" class="block text-blue-500 hover:underline">Link 2</a>
+                        <a href="#" class="block text-blue-500 hover:underline">Link 3</a>
+                    </div>
+                </details>
+            </div>
         </div>
         <main class="bg-[#0C0712]">
             <section id="home" class="relative h-screen w-full">
