--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                         class="cursor-pointer uppercase tracking-widest text-sm font-light hover:text-gray-400">Acquisition
                         Options</span>
                     <div
-                        class="absolute top-full left-0 bg-gray-900 hidden group-hover:flex flex-col p-2 opacity-0 transition-all group-hover:opacity-100">
+                        class="absolute top-full left-0 bg-gray-900 hidden group-hover:flex flex-col p-2 opacity-0 transition-all group-hover:opacity-100 hover:w-10">
                         <a href="#business" class="text-white text-sm hover:text-gray-400">Business Options</a>
                         <a href="#personal" class="text-white text-sm hover:text-gray-400">Personal Options</a>
                         <a href="#public" class="text-white text-sm hover:text-gray-400">Public Sector Options
-                            Publics</a>
+                            </a>
                     </div>
                 </div>
 
@@ -53,7 +53,7 @@
                         class="cursor-pointer uppercase tracking-widest text-sm font-light hover:text-gray-400">360
                         space</span>
                     <div
-                        class="absolute top-full left-0 bg-gray-900 hidden group-hover:flex flex-col p-2 opacity-0 transition-all group-hover:opacity-100">
+                        class="absolute top-full left-0 bg-gray-900 hidden group-hover:flex flex-col p-2 opacity-0 transition-all group-hover:opacity-100 ">
                         <a href="#insurance" class="text-white text-sm hover:text-gray-400">Insurance</a>
                         <a href="#maintenance" class="text-white text-sm hover:text-gray-400">Maintenance &
                             Installation</a>
@@ -90,25 +90,27 @@
                 <details class="mb-8 ">
                     <summary class="cursor-pointer text-xl font-semibold text-purple-600">My Company</summary>
                     <div class="mt-2 ml-4">
-                        <a href="#" class="block text-blue-500 hover:underline">Link 1</a>
-                        <a href="#" class="block text-blue-500 hover:underline">Link 2</a>
-                        <a href="#" class="block text-blue-500 hover:underline">Link 3</a>
+                        <a href="#" class="block text-blue-500 hover:underline">About us</a>
+                        <a href="#" class="block text-blue-500 hover:underline">Careers</a>
+                        <a href="#" class="block text-blue-500 hover:underline">Contact Information</a>
                     </div>
                 </details>
                 <details class="mb-8">
-                    <summary class="cursor-pointer text-xl font-semibold text-purple-600">Dropdown 2</summary>
+                    <summary class="cursor-pointer text-xl font-semibold text-purple-600">Acquisition Options</summary>
                     <div class="mt-2 ml-4">
-                        <a href="#" class="block text-blue-500 hover:underline">Link 1</a>
-                        <a href="#" class="block text-blue-500 hover:underline">Link 2</a>
-                        <a href="#" class="block text-blue-500 hover:underline">Link 3</a>
+                        <a href="#" class="block text-blue-500 hover:underline">Business Options</a>
+                        <a href="#" class="block text-blue-500 hover:underline">Personal Options</a>
+                        <a href="#" class="block text-blue-500 hover:underline">Public sector Options</a>
+                        <a href="#" class="block text-blue-500 hover:underline">Public sector Options</a>
                     </div>
                 </details>
                 <details class="mb-8">
-                    <summary class="cursor-pointer text-xl font-semibold text-purple-600">Dropdown 3</summary>
+                    <summary class="cursor-pointer text-xl font-semibold text-purple-600">360 space</summary>
                     <div class="mt-2 ml-4">
-                        <a href="#" class="block text-blue-500 hover:underline">Link 1</a>
-                        <a href="#" class="block text-blue-500 hover:underline">Link 2</a>
-                        <a href="#" class="block text-blue-500 hover:underline">Link 3</a>
+                        <a href="#" class="block text-blue-500 hover:underline">Insurance</a>
+                        <a href="#" class="block text-blue-500 hover:underline">Maintenance & Installation 2</a>
+                        <a href="#" class="block text-blue-500 hover:underline">Shop</a>
+                        <a href="#" class="block text-blue-500 hover:underline">Sell my vehicle</a>
                     </div>
                 </details>
             </div>
