--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                       </div>
                       <h3 class="mb-2 text-xl font-bold dark:text-white">Business Automation</h3>
                       <p class="text-gray-500 dark:text-gray-400">
-                        Auto-assign tasks, send Slack messages, and much more with hundreds of new templates to help you get started.
+                        lorem
                       </p>
                     </div>
                     <div class="text-center">
@@ -337,7 +337,7 @@
                         </div>
                         <h3 class="mb-2 text-xl font-bold dark:text-white">Business Automation</h3>
                         <p class="text-gray-500 dark:text-gray-400">
-                          Auto-assign tasks, send Slack messages, and much more with hundreds of new templates to help you get started.
+                          lorem
                         </p>
                       </div>
                       <div class="text-center">
@@ -349,7 +349,7 @@
                         </div>
                         <h3 class="mb-2 text-xl font-bold dark:text-white">Business Automation</h3>
                         <p class="text-gray-500 dark:text-gray-400">
-                          Auto-assign tasks, send Slack messages, and much more with hundreds of new templates to help you get started.
+                          lorem
                         </p>
                       </div>
                       <div class="text-center">
@@ -361,7 +361,7 @@
                         </div>
                         <h3 class="mb-2 text-xl font-bold dark:text-white">Business Automation</h3>
                         <p class="text-gray-500 dark:text-gray-400">
-                          Auto-assign tasks, send Slack messages, and much more with hundreds of new templates to help you get started.
+                          lorem
                         </p>
                       </div>
                       <div class="text-center">
@@ -373,7 +373,7 @@
                         </div>
                         <h3 class="mb-2 text-xl font-bold dark:text-white">Business Automation</h3>
                         <p class="text-gray-500 dark:text-gray-400">
-                          Auto-assign tasks, send Slack messages, and much more with hundreds of new templates to help you get started.
+                          lorem
                         </p>
                       </div>
                       <div class="text-center">
@@ -385,7 +385,7 @@
                         </div>
                         <h3 class="mb-2 text-xl font-bold dark:text-white">Business Automation</h3>
                         <p class="text-gray-500 dark:text-gray-400">
-                          Auto-assign tasks, send Slack messages, and much more with hundreds of new templates to help you get started.
+                          lorem
                         </p>
                       </div>
                       <div class="text-center">
@@ -397,7 +397,7 @@
                         </div>
                         <h3 class="mb-2 text-xl font-bold dark:text-white">Business Automation</h3>
                         <p class="text-gray-500 dark:text-gray-400">
-                          Auto-assign tasks, send Slack messages, and much more with hundreds of new templates to help you get started.
+                          lorem
                         </p>
                       </div>
                                 
